# gaspi-benchmark-suite

./: CMakeLists.txt  README.md
application-benchmarks/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  compile  configure  configure.ac  depcomp  install-sh  missing
application-benchmarks/GUPs/: CMakeLists.txt  GASPIRandomAccess.c  MPIRandomAccess.c  RandomAccess.h  comm_util.h
application-benchmarks/GUPs/include/: check.h  hpcc.h
application-benchmarks/GUPs_large_data/: CMakeLists.txt
application-benchmarks/GUPs_passive_comm_2processes/: CMakeLists.txt  LICENSE
application-benchmarks/GUPs_threaded_different_queues/: SHMEMRandomAccess.c
application-benchmarks/applications/: Makefile.am  Makefile.in
application-benchmarks/applications/GUPs/: Makefile.am  Makefile.in  README  SHMEMRandomAccess.c
application-benchmarks/applications/GUPs_large_data/: Makefile.am  Makefile.in  README  SHMEMRandomAccess.c
application-benchmarks/applications/GUPs_passive_comm_2processes/: GASPIRandomAccess.c  Makefile.am  Makefile.in  README  README.md  comm_util.h
application-benchmarks/applications/GUPs_threaded_different_queues/: Makefile.am  Makefile.in  README  RandomAccess.h  SHMEMRandomAccess.c  comm_util.h  success_or_die.h
application-benchmarks/applications/put_get_performance/: LICENSE  Makefile.am  Makefile.in  README  main.c  util.h
application-benchmarks/applications/ring-1d/: BSD.md  Makefile.am  Makefile.in  README  comm_util.h  data.h  left_right_dataflow_halo.c  slice.c  slice.h  testsome.c  testsome.h
application-benchmarks/applications/ssca1/: Makefile.am  Makefile.in  README  main.c  pairwise_align.c  scan_backwards.c
application-benchmarks/applications/ssca1_big_cluster/: Makefile.am  Makefile.in  main.c  parameters.c
application-benchmarks/applications/ssca1_no_segment_dependancy/: INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  gen_scal_data.c  gen_sim_matrix.c  glibc_sort.c  main.c  parameters.c  parameters.h  scan_backwards.h  test.c  types.h  util.h
application-benchmarks/applications/ssca1_threaded_segment/: Makefile.am  Makefile.in  README  main.c  pairwise_align.c  parameters.h  types.h  util.h
application-benchmarks/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
application-benchmarks/inc/: Makefile.in  arraylist.h  utility.c
application-benchmarks/include/: arraylist.c
application-benchmarks/optimizations/: CMakeLists.txt
application-benchmarks/optimizations/GUPs_large_data/: comm_util.h
application-benchmarks/optimizations/GUPs_threaded_different_queues/: CC-BY.md  CMakeLists.txt  comm_util.h
application-benchmarks/optimizations/ssca1.bak/: CMakeLists.txt  gen_scal_data.h  gen_sim_matrix.h  scan_backwards.c
application-benchmarks/optimizations/ssca1_big_cluster/: CMakeLists.txt  glibc_sort.c  main.c
application-benchmarks/optimizations/ssca1_no_segment_dependancy/: gen_scal_data.h  pairwise_align.c  pairwise_align.h  sort.h
application-benchmarks/put_get_performance/: CMakeLists.txt  main.c
application-benchmarks/ring-1d/: CMakeLists.txt  LICENSE  comm_util.h  constant.h  data.c  slice.c  slice.h  success_or_die.h  testsome.h
application-benchmarks/script/: build.sh  build_run.sh  kill.sh  mfile_eno1_1GB.txt  mfile_ib0.txt  paths.sh  run.sh  test.txt
application-benchmarks/ssca1/: CMakeLists.txt  Makefile.in  gen_scal_data.c  gen_scal_data.h  gen_sim_matrix.c  gen_sim_matrix.h  glibc_sort.c  main.c  pairwise_align.c  pairwise_align.h  parameters.c  parameters.h  scan_backwards.c  scan_backwards.h  sort.h  types.h  util.c  util.h
application-benchmarks/ssca1_big_cluster/: pairwise_align.h  scan_backwards.h  util.c  util.h
application-benchmarks/ssca1_no_segment_dependancy/: CMakeLists.txt  Makefile.in  gen_sim_matrix.h  scan_backwards.c  success_or_die.h  util.c
application-benchmarks/ssca1_threaded_segment/: CMakeLists.txt  LICENSE  parameters.c  scan_backwards.c  sort.h  types.h
micro-benchmarks/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac
micro-benchmarks/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
micro-benchmarks/gaspi-benchmark/: gbs_abench_grid.c  gbs_benchmark.h  gbs_benchmark_utils.h  gbs_microbenchmarks.c  gbs_ubench_allreduce.c  gbs_ubench_get_all_bdir.c  gbs_ubench_put_aggregate_single_udir.c
micro-benchmarks/inc/: Makefile.am  Makefile.in  arraylist.h  stopwatch.h  utility.h
micro-benchmarks/include/: stopwatch.c
micro-benchmarks/latex/: 00-Mainfile.tex  20-Background.tex  30-Development.tex  40-Evaluation.tex  50-Conclusion.tex  Literatur.bib  header.tex  prebuild.sh  thesis-florian.bst
micro-benchmarks/latex/result-gpi/: gpi-ib-get.csv  gpi-ib-put.csv  gpi-te-get.csv
micro-benchmarks/osu-imb-csv-parser/: build.sh  csv-generator.c  csv-imb-parser.c  csv-imb-parser.h  csv-osu-parser.c  csv-osu-parser.h
micro-benchmarks/programs/gaspi-benchmark/: argparser.h  gbs_abench_grid.c  gbs_abench_grid.h  gbs_benchmark.c  gbs_benchmark.h  gbs_benchmark_utils.h  gbs_microbenchmarks.c  gbs_microbenchmarks.h  gbs_ubench_allreduce.c  gbs_ubench_get_all_bdir.c  gbs_ubench_noti_rate.c  gbs_ubench_ping_pong.c  gbs_ubench_put_all_bdir.c  gbs_ubench_put_all_udir.c  gbs_ubench_put_single_bdir.c  gbs_ubench_put_solo_single_udir.c
micro-benchmarks/programs/include/: arraylist.c
micro-benchmarks/scripts/: kill.sh  launch.sh  machines_875306  machines_875369  machines_875391  machines_875509  machines_875586  machines_877607  mfile.txt  run-mpibench.sh  sendResult.sh  slurm-875586.out  slurm-877386-ad.out
micro-benchmarks/src/: CMakeLists.txt  Makefile.am  Makefile.in  gbs_abench_grid.h  gbs_ubench_atomic.c  gbs_ubench_barrier.c  gbs_ubench_get_single_udir.c  gbs_ubench_put_solo_single_udir.c  gbs_ubench_true_exchange.c  gbs_ubench_twosided_ping_pong.c
micro-benchmarks/src/old/: argparser.c  (+9 more)
micro-benchmarks/util/: CMakeLists.txt  benchdefs.h  check.h  stopwatch.c  stopwatch.h  util.c  util.h  util_memory.c  util_memory.h
(+4038 files in other folders)
