cmake_minimum_required(VERSION 3.2)

option(USE_MPI3 "Build with MPI3 Support" OFF)
option(USE_SHMEM "Build with SHMEM Support" OFF)
option(USE_GPI2 "Build with MPI3 Support" ON)


if(USE_GPI2)
	find_package(GPI2 REQUIRED)
	add_executable(GUPs_GASPI "GASPIRandomAccess.c")
	target_link_libraries(GUPs_GASPI PRIVATE "${GPI2_LIBRARIES}")
	target_compile_definitions(GUPs_GASPI PRIVATE USE_GASPI)
	target_include_directories(GUPs_GASPI PRIVATE "${GPI2_INCLUDE_DIRS}" "include")
	target_compile_features(GUPs_GASPI PRIVATE c_std_11)
endif()

if(USE_MPI3)
	find_package(MPI REQUIRED)
	add_executable(GUPs_MPI "MPIRandomAccess.c")
	target_link_libraries(GUPs_MPI PRIVATE MPI::MPI_C)
	target_compile_features(GUPs_MPI PRIVATE c_std_11)
	target_compile_definitions(GUPs_MPI PRIVATE USE_MPI3)
	target_include_directories(GUPs_MPI PRIVATE "include")
endif()

if(USE_SHMEM)
	find_package(MPI REQUIRED)
	set(CMAKE_C_COMPILER "oshcc")
	set(CMAKE_CXX_COMPILER "oshc++")
	add_executable(GUPs_SHMEM "SHMEMRandomAccess.c")
	target_link_libraries(GUPs_SHMEM PRIVATE MPI::MPI_C)
	target_compile_features(GUPs_SHMEM PRIVATE c_std_11)
	target_include_directories(GUPs_SHMEM PRIVATE "include")
endif()
