SUBDIRS =  
SUBDIRS += GUPs \
	   GUPs_large_data \
	   GUPs_threaded_different_queues \
	   put_get_performance \
	   ring-1d \
	   ssca1 \
	   ssca1_big_cluster \
	   ssca1_no_segment_dependancy \
	   ssca1_threaded_segment

if MPI3
SUBDIRS += GUPs_passive_comm_2processes
endif

if GASPI
SUBDIRS += GUPs_passive_comm_2processes
endif
