cmake_minimum_required(VERSION 3.2)

option(USE_MPI3 "Build with MPI3 Support" OFF)
option(USE_SHMEM "Build with SHMEM Support" OFF)
option(USE_GPI2 "Build with MPI3 Support" ON)

add_executable(put_get_performance "main.c")
find_package(OpenMP REQUIRED)
find_package(Threads REQUIRED)
if(USE_GPI2)
	find_package(GPI2 REQUIRED)
	target_link_libraries(put_get_performance PRIVATE "${GPI2_LIBRARIES}" "OpenMP::OpenMP_C" "Threads::Threads")
	target_include_directories(put_get_performance PRIVATE "${GPI2_INCLUDE_DIRS}")
	target_compile_definitions(put_get_performance PRIVATE USE_GASPI)
	target_compile_features(put_get_performance PRIVATE c_std_11)
endif()

if(USE_MPI3)
	find_package(MPI REQUIRED)
	target_link_libraries(put_get_performance PRIVATE "MPI::MPI_C" "OpenMP::OpenMP_C" "Threads::Threads")
	target_compile_definitions(put_get_performance PRIVATE USE_MPI3)
	target_compile_features(put_get_performance PRIVATE c_std_11)
endif()

if(USE_SHMEM)
	find_package(MPI REQUIRED)
	target_link_libraries(put_get_performance PRIVATE "MPI::MPI_C" "OpenMP::OpenMP_C" "Threads::Threads")
	target_compile_definitions(put_get_performance PRIVATE USE_SHMEM)
	target_compile_features(put_get_performance PRIVATE c_std_11)
endif()
