cmake_minimum_required(VERSION 3.2)

option(USE_MPI3 "Build with MPI3 Support" OFF)
option(USE_SHMEM "Build with SHMEM Support" OFF)
option(USE_GPI2 "Build with MPI3 Support" ON)

add_executable(ring-1d "data.c" "left_right_dataflow_halo.c" "slice.c" "testsome.c")
find_package(OpenMP REQUIRED)
find_package(Threads REQUIRED)
if(USE_GPI2)
	find_package(GPI2 REQUIRED)
	target_link_libraries(ring-1d PRIVATE "${GPI2_LIBRARIES}" "OpenMP::OpenMP_C" "Threads::Threads")
	target_include_directories(ring-1d PRIVATE "${GPI2_INCLUDE_DIRS}")
	target_compile_definitions(ring-1d PRIVATE USE_GASPI)
	target_compile_features(ring-1d PRIVATE c_std_11)
endif()

if(USE_MPI3)
	find_package(MPI REQUIRED)
	target_link_libraries(ring-1d PRIVATE "MPI::MPI_C" "OpenMP::OpenMP_C" "Threads::Threads")
	target_compile_definitions(ring-1d PRIVATE USE_MPI3)
	target_compile_features(ring-1d PRIVATE c_std_11)
endif()

if(USE_SHMEM)
	find_package(MPI REQUIRED)
	target_link_libraries(ring-1d PRIVATE "MPI::MPI_C" "OpenMP::OpenMP_C" "Threads::Threads")
	target_compile_definitions(ring-1d PRIVATE USE_SHMEM)
	target_compile_features(ring-1d PRIVATE c_std_11)
endif()
