cmake_minimum_required(VERSION 3.2)

option(USE_MPI3 "Build with MPI3 Support" OFF)
option(USE_SHMEM "Build with SHMEM Support" OFF)
option(USE_GPI2 "Build with GPI-2 Support" ON)

if(USE_GPI2)
	find_package(GPI2 REQUIRED)
	add_executable(ssca1_GASPI "gen_scal_data.c" "gen_sim_matrix.c" "glibc_sort.c" "main.c" "pairwise_align.c" "parameters.c" "scan_backwards.c" "util.c")
	target_link_libraries(ssca1_GASPI PRIVATE "${GPI2_LIBRARIES}" "m")
	target_include_directories(ssca1_GASPI PRIVATE "${GPI2_INCLUDE_DIRS}") 
	target_compile_definitions(ssca1_GASPI PRIVATE USE_GASPI)
	target_compile_features(ssca1_GASPI PRIVATE c_std_11)
endif()

if(USE_MPI3)
	find_package(MPI REQUIRED)
	add_executable(ssca1_MPI "gen_scal_data.c" "gen_sim_matrix.c" "glibc_sort.c" "main.c" "pairwise_align.c" "parameters.c" "scan_backwards.c" "util.c")
	target_link_libraries(ssca1_MPI PRIVATE "MPI::MPI_C" "m")
	target_compile_definitions(ssca1_MPI PRIVATE USE_MPI3)
	target_compile_features(ssca1_MPI PRIVATE c_std_11)
endif()

if(USE_SHMEM)
	find_package(MPI REQUIRED)
	add_executable(ssca1_SHMEM "gen_scal_data.c" "gen_sim_matrix.c" "glibc_sort.c" "main.c" "pairwise_align.c" "parameters.c" "scan_backwards.c" "util.c")
	set(CMAKE_C_COMPILER "oshcc")
	set(CMAKE_CXX_COMPILER "oshc++")
	target_link_libraries(ssca1_SHMEM PRIVATE "MPI::MPI_C" "m")
	target_compile_definitions(ssca1_SHMEM PRIVATE USE_SHMEM)
	target_compile_features(ssca1_SHMEM PRIVATE c_std_11)
endif()
