cmake_minimum_required(VERSION 3.5)

add_subdirectory(one-sided)
add_subdirectory(one-sided-extended)
add_subdirectory(one-sided-strided)
add_subdirectory(collective)
add_subdirectory(passive)
add_subdirectory(atomic)
add_subdirectory(notification)
add_subdirectory(itwm-benchmark)
add_subdirectory(gaspi-info)
